--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,4 +1,43 @@
+body {
+  background-color: rgb(48, 53, 58);
+  color: whitesmoke;
+}
+
 .App {
   text-align: center;
 }
 
+.list {
+  display: inline-grid;
+  grid-gap: 20px;
+  grid-template-columns: auto auto auto auto;
+}
+
+.card {
+  background-color: rgb(59, 59, 202);
+  color: black;
+  font-weight: bold;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 3px solid white;
+  width: 200px;
+}
+
+.title {
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+.input {
+  margin: 10px;
+  border-radius: 5px;
+  height: 30px;
+}
+
+.button {
+  height: 30px;
+  width: 125px;
+  background-color: rgb(59, 59, 202);
+  color: whitesmoke;
+}
